new portfolio design

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 
 body {
@@ -15,38 +15,27 @@ code {
     monospace;
 }
 
-.crimson-text-regular {
-  font-family: "Crimson Text", serif;
+.arsenal-sc-regular {
+  font-family: "Arsenal SC", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.crimson-text-semibold {
-  font-family: "Crimson Text", serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.crimson-text-bold {
-  font-family: "Crimson Text", serif;
+.arsenal-sc-bold {
+  font-family: "Arsenal SC", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 
-.crimson-text-regular-italic {
-  font-family: "Crimson Text", serif;
+.arsenal-sc-regular-italic {
+  font-family: "Arsenal SC", sans-serif;
   font-weight: 400;
   font-style: italic;
 }
 
-.crimson-text-semibold-italic {
-  font-family: "Crimson Text", serif;
-  font-weight: 600;
-  font-style: italic;
-}
-
-.crimson-text-bold-italic {
-  font-family: "Crimson Text", serif;
+.arsenal-sc-bold-italic {
+  font-family: "Arsenal SC", sans-serif;
   font-weight: 700;
   font-style: italic;
 }
+
