--- a/src/pages/Homepage/HomePage.css
+++ b/src/pages/Homepage/HomePage.css
@@ -1,6 +1,51 @@
 .contentSectionContainer{
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    /* gap: 3rem; */
     background-color: #fff;
 }
+
+.slick-dots {
+    position: absolute;
+    bottom: 2.5rem !important;
+    width: 100%;
+    display: flex !important;
+    justify-content: center;
+  }
+  
+  .slick-dots li button:before {
+    color: #fff; /* Adjust this color based on your image background */
+  }
+
+  .slick-prev, .slick-next {
+    position: absolute;
+    top: 50%; /* Center vertically */
+    transform: translateY(-50%); /* Adjust to center properly */
+    color: #fff; /* Adjust this color based on your image background */
+    font-size: 24px; /* Adjust this value to make the icons larger */
+    width: 40px; /* Adjust width as needed */
+    height: 40px; /* Adjust height as needed */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    transform: scale(1.3) !important;
+  }
+  
+  .slick-prev {
+    left: 2rem !important; /* Adjust this value as needed */
+    width: 20px;
+  }
+  
+  .slick-next {
+    right: 2rem !important; /* Adjust this value as needed */
+    width: 20px;
+  }
+
+  .slick-prev:before, .slick-next:before {
+    font-size: 24px !important; /* Ensure this matches the font size you set above */
+    color: #603620 !important; /* Adjust this color based on your image background */
+  }
+  
+  
+  
