--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,3 @@
-/* .App {
-  text-align: center;
-  background-color: #FAF9F6;
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  background-color: #FAF9F6;
-  color: #fff;
-  display: flex;
-  font-family: 'Roboto', sans-serif;
-  flex-direction: column;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-* {
-  box-sizing: border-box;
-} */
-
-/* Reset some basic elements */
 * {
   margin: 0;
   padding: 0;
@@ -31,10 +6,9 @@ body {
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #f3f0ef;
   color: #333;
   line-height: 1.6;
   margin: 0;
   padding: 0;
 }
-
