--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,45 +12,45 @@
     color: #603620;
     font-size: 1.2vw;
     font-family: "Arsenal SC", sans-serif;
-  }
-  
-  .navbar.scrolled {
+}
+
+.navbar.scrolled {
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .navbar-brand {
+}
+
+.navbar-brand {
     font-size: 1.5em;
     color: #333;
-  }
-  
-  .navbar-menu {
+}
+
+.navbar-menu {
     list-style: none;
     display: flex;
     gap: 20px;
-  }
-  
-  .navbar-item {
+}
+
+.navbar-item {
     color: #333;
     cursor: pointer;
-  }
-  
-  .navbar-link {
+}
+
+.navbar-link {
     text-decoration: none;
-    color: inherit; /* This ensures the link takes on the color of the surrounding text */
-  }
-  
-  .navbar-link:hover {
+    color: inherit;
+}
+
+.navbar-link:hover {
     border-bottom: 2px solid #603620;
-  }
-  
-  .navbar-link {
+}
+
+.navbar-link {
     position: relative;
     text-decoration: none;
-    color: inherit; /* This ensures the link takes on the color of the surrounding text */
-  }
-  
-  .navbar-link::after {
+    color: inherit;
+}
+
+.navbar-link::after {
     content: '';
     position: absolute;
     width: 0;
@@ -59,10 +59,9 @@
     left: 50%;
     background-color: #603620;
     transition: width 0.3s ease, left 0.3s ease;
-  }
-  
-  .navbar-link:hover::after {
+}
+
+.navbar-link:hover::after {
     width: 100%;
     left: 0;
-  }
-  
+}
