--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,37 +1,36 @@
-.overviewMain{
+.overviewMain {
     width: 100%;
     height: 100vh;
     display: flex;
     background-color: #f3f0ef;
 }
 
-.overviewLeftContainer{
-    /* background-color: #000; */
+.overviewLeftContainer {
     width: 70%;
     display: flex;
     justify-content: left;
     align-items: center;
     text-align: center;
-    /* padding: 10% 5% 10% 10%; */
 }
 
-.overviewLeftContainer span{
+.overviewLeftContainer span {
     width: 60%;
     color: #603620;
     font-family: "Arsenal SC", sans-serif;
     font-size: 1vw;
     padding: 10% 5%;
 }
-  
-  .overviewRightContainer {
+
+.overviewRightContainer {
     width: 30%;
-    background: #F3E4DD;;
+    background: #F3E4DD;
+    ;
     color: #333;
     padding: 50px;
     text-align: center;
-  }
+}
 
-  .overViewImageContainer {
+.overViewImageContainer {
     position: relative;
     bottom: 10px;
     top: 20%;
@@ -41,9 +40,7 @@
     background-color: #742409;
 }
 
-.overViewImageContainer img{
+.overViewImageContainer img {
     width: 29vw;
     height: 28.8vw;
 }
-
-  
